# devops-study-app

./: .pre-commit-config.yaml  .release-please-manifest.json  docker-compose.yaml  mise.toml  release-please-config.json
.devcontainer/: devcontainer.json
.github/workflows/: backend-tests.yaml  docker-build-push.yaml  frontend-tests.yaml  release-please.yaml
scripts/: setup  setup_project
src/backend/: .coverage  CHANGELOG.md  Dockerfile  coverage.xml  pyproject.toml
src/backend/src/backend/: __init__.py  config.py  main.py  models.py  storage.py
src/backend/src/data/: sessions.csv
src/backend/tests/: test_config.py  test_main.py  test_storage.py
src/frontend/: Dockerfile  README.md  pyproject.toml
src/frontend/src/frontend/: __init__.py  main.py
src/frontend/src/frontend/templates/: base.html  index.html
src/frontend/tests/: conftest.py  test_main.py
