[project]
name = "study-tracker-backend"
version = "0.1.0"
description = "Backend API for tracking study time for DevOps certifications"
readme = "README.md"
authors = [{ name = "Vitaly Guzun", email = "vitaly.guzun@gmail.com" }]
requires-python = ">=3.13"
dependencies = ["fastapi>=0.118.3", "httpx>=0.28.1", "uvicorn>=0.37.0"]

[project.scripts]
study-tracker-api = "backend.main:main"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"

[tool.hatch.build.targets.wheel]
packages = ["src/backend"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
  "pytest>=8.4.2",
  "pytest-asyncio>=1.2.0",
  "pytest-cov>=7.0.0",
  "ruff>=0.14.1",
]
